2007-07-29 Changed default pcolor shading to flat; added aliases
           to make collection kwargs agree with setter names, so
           updating works; related minor cleanups.

2007-07-26 Major rewrite of mathtext.py, using the TeX box layout model.

           There is one (known) backward incompatible change.  The
           font commands (\cal, \rm, \it, \tt) now behave as TeX does:
           they are in effect until the next font change command or
           the end of the grouping.  Therefore uses of $\cal{R}$
           should be changed to ${\cal R}$.  Alternatively, you may
           use the new LaTeX-style font commands (\mathcal, \mathrm,
           \mathit, \mathtt) which do affect the following group,
           eg. $\mathcal{R}$.

           Other new features include:

           - Math may be interspersed with non-math text.  Any text
             with an even number of $'s (non-escaped) will be sent to
             the mathtext parser for layout.

           - Sub/superscripts are less likely to accidentally overlap.

           - Support for sub/superscripts in either order, eg. $x^i_j$
             and $x_j^i$ are equivalent.

           - Double sub/superscripts (eg. $x_i_j$) are considered
             ambiguous and raise an exception.  Use braces to disambiguate.

           - $\frac{x}{y}$ can be used for displaying fractions.

           - $\sqrt[3]{x}$ can be used to display the radical symbol
             with a root number and body.

           - $\left(\frac{x}{y}\right)$ may be used to create
             parentheses and other delimiters that automatically
             resize to the height of their contents.

           - Spacing around operators etc. is now generally more like
             TeX.

           - Added support (and fonts) for boldface (\bf) and
             sans-serif (\sf) symbols.

           - Log-like function name shortcuts are supported.  For
             example, $\sin(x)$ may be used instead of ${\rm sin}(x)$
