@@ -335,64 +335,6 @@ def colorbar(mappable = None, cax=None,**kw):
 colorbar.__doc__ = colorbar_doc
 
 
-def colorbar_classic(mappable = None,
-             cax=None,
-             orientation='vertical',
-             tickfmt='%1.1f',
-             cspacing='proportional',
-             clabels=None,
-             drawedges=False,
-             edgewidth=0.5,
-             edgecolor='k'):
-    """
-    Create a colorbar for mappable; if mappable is None,
-    use current image.
-
-    tickfmt is a format string to format the colorbar ticks
-
-    cax is a colorbar axes instance in which the colorbar will be
-    placed.  If None, as default axesd will be created resizing the
-    current aqxes to make room for it.  If not None, the supplied axes
-    will be used and the other axes positions will be unchanged.
-
-    orientation is the colorbar orientation: one of 'vertical' | 'horizontal'
-
-    cspacing controls how colors are distributed on the colorbar.
-    if cspacing == 'linear', each color occupies an equal area
-    on the colorbar, regardless of the contour spacing.
-    if cspacing == 'proportional' (Default), the area each color
-    occupies on the the colorbar is proportional to the contour interval.
-    Only relevant for a Contour image.
-
-    clabels can be a sequence containing the
-    contour levels to be labelled on the colorbar, or None (Default).
-    If clabels is None, labels for all contour intervals are
-    displayed. Only relevant for a Contour image.
-
-    if drawedges == True, lines are drawn at the edges between
-    each color on the colorbar. Default False.
-
-    edgecolor is the line color delimiting the edges of the colors
-    on the colorbar (if drawedges == True). Default black ('k')
-
-    edgewidth is the width of the lines delimiting the edges of
-    the colors on the colorbar (if drawedges == True). Default 0.5
-
-    return value is the colorbar axes instance
-    """
-    if mappable is None:
-        mappable = gci()
-    ret = gcf().colorbar_classic(mappable, cax = cax,
-                         orientation = orientation,
-                         tickfmt = tickfmt,
-                         cspacing=cspacing,
-                         clabels=clabels,
-                         drawedges=drawedges,
-                         edgewidth=edgewidth,
-                         edgecolor=edgecolor)
-    draw_if_interactive()
-    return ret
-
 def colors():
     """
     This is a do nothing function to provide you with help on how
@@ -1606,19 +1548,6 @@ def plotfile(fname, cols=(0,), plotfuncs=None,
 
     draw_if_interactive()
 
-### Deprecated functions:
-def scatter_classic(*args, **kwargs):
-    return gca().scatter_classic(*args, **kwargs)
-if Axes.scatter_classic.__doc__ is not None:
-    scatter_classic.__doc__ = dedent(Axes.scatter_classic.__doc__)
-
-def pcolor_classic(*args, **kwargs):
-    return gca().pcolor_classic(*args, **kwargs)
-if Axes.pcolor_classic.__doc__ is not None:
-    pcolor_classic.__doc__ = dedent(Axes.pcolor_classic.__doc__)
-
-
-
 ### Do not edit below this point
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
@@ -2353,27 +2282,6 @@ def quiver(*args, **kwargs):
     return ret
 if Axes.quiver.__doc__ is not None:
     quiver.__doc__ = dedent(Axes.quiver.__doc__) + """
-Addition kwargs: hold = [True|False] overrides default hold state"""
-
-# This function was autogenerated by boilerplate.py.  Do not edit as
-# changes will be lost
-def quiver2(*args, **kwargs):
-    # allow callers to override the hold state by passing hold=True|False
-    b = ishold()
-    h = popd(kwargs, 'hold', None)
-    if h is not None:
-        hold(h)
-    try:
-        ret =  gca().quiver2(*args, **kwargs)
-        draw_if_interactive()
-    except:
-        hold(b)
-        raise
-    gci._current = ret
-    hold(b)
-    return ret
-if Axes.quiver2.__doc__ is not None:
-    quiver2.__doc__ = dedent(Axes.quiver2.__doc__) + """
 Addition kwargs: hold = [True|False] overrides default hold state"""
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
